--- a/package.json
+++ b/package.json
@@ -14,37 +14,42 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@iconify/icons-akar-icons": "^1.2.9",
-    "@iconify/icons-fluent-emoji-high-contrast": "^1.2.1",
-    "@iconify/icons-ic": "^1.2.10",
-    "@iconify/icons-simple-icons": "^1.2.29",
-    "@splidejs/react-splide": "^0.7.5",
-    "@splidejs/splide": "^4.0.2",
-    "@splidejs/splide-extension-auto-scroll": "^0.4.2",
-    "@svgr/webpack": "^6.2.1",
-    "gatsby": "^4.7.2",
-    "gatsby-plugin-react-helmet": "^5.7.0",
+    "@iconify/icons-akar-icons": "^1.2.19",
+    "@iconify/icons-fluent-emoji-high-contrast": "^1.2.7",
+    "@iconify/icons-ic": "^1.2.13",
+    "@iconify/icons-simple-icons": "^1.2.74",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "@svgr/webpack": "^8.1.0",
+    "gatsby": "^5.16.1",
+    "gatsby-plugin-react-helmet": "^6.16.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-source-filesystem": "^4.13.0",
-    "gatsby-transformer-json": "^4.13.0",
-    "lightgallery": "^2.4.0",
-    "rc-pagination": "^3.1.17",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby-source-filesystem": "^5.16.0",
+    "gatsby-transformer-json": "^5.16.0",
+    "lightgallery": "^2.9.0",
+    "rc-pagination": "^5.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-responsive": "^9.0.0-beta.6",
-    "react-vertical-timeline-component": "^3.5.2",
-    "sweetalert2": "^11.4.4",
-    "sweetalert2-react-content": "^4.2.0"
+    "react-responsive": "^10.0.1",
+    "react-vertical-timeline-component": "^4.0.0",
+    "sweetalert2": "^11.26.20",
+    "sweetalert2-react-content": "^5.1.1"
   },
   "devDependencies": {
-    "@iconify/react": "^4.0.0",
-    "@tailwindcss/postcss": "^4.0.0",
-    "eslint": "^8.9.0",
-    "eslint-plugin-react": "^7.28.0",
-    "gatsby-plugin-postcss": "^5.7.0",
-    "postcss": "^8.4.6",
+    "@iconify/react": "^6.0.2",
+    "@tailwindcss/postcss": "^4.2.1",
+    "eslint": "^10.0.2",
+    "eslint-plugin-react": "^7.37.5",
+    "gatsby-plugin-postcss": "^6.16.0",
+    "postcss": "^8.5.6",
     "prettier": "3.5.0",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.2.1"
+  },
+  "resolutions": {
+    "cssnano": "^7.0.0",
+    "cssnano-preset-default": "^7.0.0",
+    "postcss-discard-duplicates": "^7.0.0"
   }
 }
